--- a/src/web/CareLeavers.Web/Views/Shared/_ErrorLayout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_ErrorLayout.cshtml
@@ -34,8 +34,7 @@
     <meta name="apple-mobile-web-app-title" content="Support for care leavers" />
     
     <link rel="stylesheet" href="~/css/application.css" asp-append-version="@scriptConfig.AddCssVersion"/>
-    <link rel="stylesheet" href="~/css/metadata.css" asp-append-version="@scriptConfig.AddCssVersion"/>
-    <link rel="stylesheet" href="~/css/cta.css" asp-append-version="@scriptConfig.AddCssVersion"/>
+    <link rel="stylesheet" href="~/css/print.css" asp-append-version="@scriptConfig.AddCssVersion"/>
     @if (IsSectionDefined("Head")) {
         @await RenderSectionAsync("Head", required: false)
     }
@@ -89,6 +88,7 @@
     import { initAll } from '/js/govuk-frontend.min.js'
     initAll()
 </script>
+<script asp-add-nonce="true" src="/js/dfefrontend.min.js"></script>
 </body>
 
 </html>
