--- a/src/web/CareLeavers.Web/Views/Shared/LastUpdated.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/LastUpdated.cshtml
@@ -3,7 +3,7 @@
 
 @if (Model.ShowLastUpdated)
 {
-    <div class="govuk-grid-row">
+    <div class="govuk-grid-row" id="last-updated">
         <div class="metadata-logo-wrapper">
             <div class="govuk-grid-column-two-thirds metadata-column">
                 <hr class="govuk-section-break govuk-section-break--visible">
