--- a/src/web/CareLeavers.Web/Views/Shared/Shareaholic.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Shareaholic.cshtml
@@ -21,7 +21,7 @@
         </div>
     }
     
-    <div class="govuk-grid-row">
+    <div class="govuk-grid-row" id="share-this-page">
         <div class="govuk-grid-column-full">
             <h3 class="govuk-heading-m">Share this page</h3>
             <div class="shareaholic-canvas" data-app="share_buttons" data-app-id="@scriptConfig.ShareaholicAppId"></div>
