Updated to remove non-breaking space from secondary grid on 2/3 width pages, as it adds an extra blank page to printing

--- a/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
+++ b/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
@@ -110,9 +110,7 @@
     </div>
     @if (Model.Width == PageWidth.TwoThirds)
     {
-        <div class="govuk-grid-column-one-third">
-            &nbsp;
-        </div>
+        <div class="govuk-grid-column-one-third"></div>
         <div class="govuk-grid-column-full" id="secondary-content">
             @if (Model.SecondaryContent != null)
             {
