--- a/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
@@ -11,6 +11,10 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
 * {
   font-family: $govuk-font-family !important; // Override all fonts to match
 }
+.govuk-phase-banner__content
+{
+  width: 100%;
+}
 
 .translate {
   display: block;
@@ -40,9 +44,23 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
 }
 
 .dfe-page-grey {
-  padding-top: 40px;
-  padding-bottom: 30px;
+  @include govuk-responsive-padding(6, "top");
+  @include govuk-responsive-padding(9, "bottom");
   background-color: #EAF5FF;
+}
+
+#main-content-footer.dfe-page-grey {
+  @include govuk-responsive-padding(6, "bottom");
+}
+
+.dfe-page-grey .govuk-body-l {
+  margin: 0;
+}
+
+.govuk-breadcrumbs {
+  margin-top: 0;
+  @include govuk-responsive-margin(9, "bottom");
+  
 }
 
 .full-width-image {
@@ -57,9 +75,7 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
 .hf-card a {
   text-decoration: none;
 }
-.hf-card:focus-within {
-  @include govuk-focused-text;
-}
+
 
 .hf-card a .hf-card-details p {
   color: #0b0c0c;
@@ -75,12 +91,12 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
   background-color: #003a69;
 }
 
+.hf-card:focus-within {
+  @include govuk-focused-text;
+}
+
 .hf-card:focus-within a .hf-card-container .hf-card-details p,
-.hf-card:focus-within a .hf-card-container .hf-card-details h2,
-.hf-card:focus-within a .hf-card-container .hf-card-details h3,
 .hf-card:focus-within a .hf-card-container .cat-card-details p,
-.hf-card:focus-within a .hf-card-container .cat-card-details h2,
-.hf-card:focus-within a .hf-card-container .cat-card-details h3,
 .hf-card a:hover .hf-card-container .hf-card-details p,
 .hf-card a:hover .hf-card-container .hf-card-details h2,
 .hf-card a:hover .hf-card-container .hf-card-details h3,
@@ -88,6 +104,15 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
 .hf-card a:hover .hf-card-container .cat-card-details h2,
 .hf-card a:hover .hf-card-container .cat-card-details h3 {
   color: #ffffff;
+}
+
+.hf-card:focus-within a .hf-card-container .hf-card-details h2,
+.hf-card:focus-within a .hf-card-container .hf-card-details h3,
+.hf-card:focus-within a .hf-card-container .cat-card-details h2,
+.hf-card:focus-within a .hf-card-container .cat-card-details h3
+{
+  @include govuk-focused-text;
+  display: inline-block;
 }
 
 .hf-card-details {
@@ -599,4 +624,126 @@ html
 // Heading padding fix
 .dfe-header {
   padding-bottom: 1rem;
+}
+
+// Contents list
+.gem-c-contents-list__list-item--numbered .gem-c-contents-list__link {
+  display: table
+}
+
+.gem-c-contents-list__number,.gem-c-contents-list__numbered-text {
+  display: table-cell
+}
+
+.gem-c-contents-list__number {
+  min-width: 1.5em
+}
+
+.gem-c-contents-list__numbered-text {
+  padding-left: .3em
+}
+
+.direction-rtl .gem-c-contents-list__numbered-text {
+  padding-left: 0;
+  padding-right: .3em
+}
+
+.gem-c-contents-list {
+  position: relative;
+  z-index: 1;
+  background: #fff;
+  box-shadow: 0 20px 15px -10px #fff
+}
+
+.gem-c-contents-list__title {
+  margin: 0;
+  color: #0b0c0c;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  line-height: 1.5
+}
+
+.gem-c-contents-list__list,.gem-c-contents-list__nested-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  color: #0b0c0c;
+  font-family: "GDS Transport",arial,sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.25
+}
+
+.gem-c-contents-list__link:focus,.gem-c-contents-list__link:active:focus,.gem-c-contents-list__link:link:focus,.gem-c-contents-list__link:visited:focus {
+  outline: 3px solid rgba(0,0,0,0);
+  color: #0b0c0c;
+  background-color: #fd0;
+  box-shadow: 0 -2px #fd0,0 4px #0b0c0c;
+  text-decoration: none;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+  color: #0b0c0c !important
+}
+
+.gem-c-contents-list__list-item--parent>.gem-c-contents-list__link {
+  font-weight: 700
+}
+
+.gem-c-contents-list__list-item {
+  padding-top: 10px;
+  line-height: 1.3;
+  list-style-type: none
+}
+
+@media(min-width: 40.0625em) {
+  .gem-c-contents-list__list-item {
+    padding-top:7.5px
+  }
+}
+
+.gem-c-contents-list__list-item--dashed {
+  position: relative;
+  padding-left: 25px;
+  padding-right: 25px
+}
+
+.gem-c-contents-list__list-item--dashed .gem-c-contents-list__list-item-dash::before {
+  content: "—";
+  position: absolute;
+  left: 0;
+  width: 20px;
+  overflow: hidden
+}
+
+.direction-rtl .gem-c-contents-list__list-item--dashed .gem-c-contents-list__list-item-dash::before {
+  left: auto;
+  right: 0
+}
+
+.lte-ie8 .gem-c-contents-list__list-item--dashed .gem-c-contents-list__link {
+  display: inline-block;
+  vertical-align: top
+}
+
+.gem-c-contents-list--alternative-line-style .gem-c-contents-list__title {
+  margin-bottom: 15px
+}
+
+.gem-c-contents-list--alternative-line-style .gem-c-contents-list__list-item {
+  padding: 10px 0;
+  margin: 0
+}
+
+.gem-c-contents-list--alternative-line-style .gem-c-contents-list__list-item-dash::before {
+  display: none
+}
+
+.gem-c-contents-list--alternative-line-style .gem-c-contents-list__list-item--active {
+  padding: 5px 10px;
+  margin: 5px 0;
+  border-left: 4px solid #1d70b8;
+  color: #1d70b8;
+  font-weight: 700
 }
