Updated to new DfE Card

--- a/src/web/CareLeavers.Web/AssetSrc/scss/print.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/print.scss
@@ -115,7 +115,7 @@
     break-inside: avoid;
   }
 
-  .hf-card {
+  .dfe-card {
     -webkit-column-break-inside: avoid;
     page-break-inside: avoid;
     break-inside: avoid;
